--- a/index.html
+++ b/index.html
@@ -173,10 +173,14 @@
 
           <!-- Card 3 -->
           <div class="cards">
-            <h1>I am flexible with time zone & locations</h1>
+            <h1>
+              <!-- I am flexible with time zone & locations -->
+               <!-- I am flexible with time zones and locations, and open to both remote and on-site opportunities. -->
+                Flexible with time zones. open to remote or onsite
+            </h1>
 
             <p>
-              I'm based in Tamilnadu, Chennai and open to remote work worldwide
+              I'm based in Tamilnadu, Chennai and open to work onsite remote worldwide
             </p>
 
             <video
@@ -314,18 +318,20 @@
           <div class="designer autoDisplay">
             <h1 class="gradient">Designer <i class="bx bx-desktop"></i></h1>
             <p>
-              I have expertise in HTML, CSS, JavaScript, and design tools like
+              <!-- I have expertise in HTML, CSS, JavaScript, and design tools like
               PicsArt. My strength lies in blending aesthetics with
-              functionality to create seamless user experiences.
+              functionality to create seamless user experiences. -->
+              I design clean and responsive websites using HTML5 and CSS3. I focus on creating easy-to-use layouts that look good on all devices and are accessible to everyone. I also use CSS frameworks like Bootstrap to build modern, mobile-friendly designs.
             </p>
           </div>
 
           <div class="coder autoDisplay">
             <h1 class="gradient">Coder <i class="bx bx-code-block"></i></h1>
             <p>
-              I'm skilled in HTML, CSS, JavaScript, and frameworks like React
+              <!-- I'm skilled in HTML, CSS, JavaScript, and frameworks like React
               and Node.js. I also have experience with database management using
-              MongoDB and MySQL.
+              MongoDB and MySQL. -->
+              I specialize in frontend web development with strong proficiency in HTML5, CSS3, and JavaScript (ES6+). I have hands-on experience using React.js for developing component-based single-page applications.
             </p>
           </div>
 
