--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
         loop
         plays-inline
         type="video/mp4"
-        src="videos/galaxy.mp4"
+        src="https://rydefoundation.in/stprojects/linganand/portfolio/videos/galaxy.mp4"
       ></video>
 
       <header>
@@ -99,7 +99,7 @@
             <video
               muted
               id="projectVideo1"
-              src="videos/Omnifood-video.mp4"
+              src="https://rydefoundation.in/stprojects/linganand/portfolio/videos/Omnifood-video.mp4"
             ></video>
 
             <div class="hover-sign"></div>
@@ -146,7 +146,7 @@
             <video
               muted
               id="projectVideo2"
-              src="videos/portfolio.mp4"
+              src="https://rydefoundation.in/stprojects/linganand/portfolio/videos/portfolio.mp4"
             ></video>
 
             <div class="hover-sign"></div>
@@ -159,7 +159,7 @@
             <video
               muted
               id="projectVideo3"
-              src="videos/Thirukkural-video.mp4"
+              src="https://rydefoundation.in/stprojects/linganand/portfolio/videos/Thirukkural-video.mp4"
             ></video>
 
             <div class="hover-sign"></div>
@@ -206,7 +206,7 @@
             <video
               muted
               id="projectVideo4"
-              src="videos/ProfileCard-video.mp4"
+              src="https://rydefoundation.in/stprojects/linganand/portfolio/videos/ProfileCard-video.mp4"
             ></video>
 
             <div class="hover-sign"></div>
