--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         loop
         plays-inline
         type="video/mp4"
-        src="https://rydefoundation.in/stprojects/linganand/portfolio/videos/galaxy.mp4"
+        src="videos/galaxy.mp4"
       ></video>
 
       <header>
@@ -99,7 +99,7 @@
 
       <div class="blackhole-box">
         <video
-          src="https://rydefoundation.in/stprojects/linganand/portfolio/videos/blackhole.mp4"
+          src="videos/blackhole.mp4"
           autoplay
           muted
           loop
@@ -132,7 +132,7 @@
         <div class="hero-vid-box">
           <video
             class="autoBlur"
-            src="https://rydefoundation.in/stprojects/linganand/portfolio/videos/hero-video.mp4"
+            src="videos/hero-video.mp4"
             loop
             autoplay
             muted
@@ -184,7 +184,7 @@
             </p>
 
             <video
-              src="https://rydefoundation.in/stprojects/linganand/portfolio/videos/glob.mp4"
+              src="videos/glob.mp4"
               type="video/mp4"
               autoplay
               muted
@@ -219,7 +219,7 @@
             <video
               muted
               id="projectVideo1"
-              src="https://rydefoundation.in/stprojects/linganand/portfolio/videos/Omnifood-video.mp4"
+              src="videos/Omnifood-video.mp4"
             ></video>
 
             <div class="hover-sign"></div>
@@ -263,7 +263,7 @@
           </div>
 
           <div class="projects-prev-box autoBlur">
-            <video muted id="projectVideo2" src="https://rydefoundation.in/stprojects/linganand/portfolio/videos/portfolio.mp4"></video>
+            <video muted id="projectVideo2" src="videos/portfolio.mp4"></video>
 
             <div class="hover-sign"></div>
           </div>
@@ -275,7 +275,7 @@
             <video
               muted
               id="projectVideo3"
-              src="https://rydefoundation.in/stprojects/linganand/portfolio/videos/Thirukkural-video.mp4"
+              src="videos/Thirukkural-video.mp4"
             ></video>
 
             <div class="hover-sign"></div>
